--- a/index.html
+++ b/index.html
@@ -144,20 +144,12 @@ function unhide(divID) {
   <h4>About</h4>
 
   <p>
-  I'm a Senior Researcher at <a href='https://www.microsoft.com/en-us/research/lab/microsoft-research-new-england/' target="_blank" rel="noopener noreferrer">Microsoft Research New England</a>, within the Machine Learning and Statstics group.
-  My research seeks to make machine learning more <b>broadly applicable</b> (especially to data-poor applications) and <b>trustworthy</b> (e.g., robust and interpretable). I am particularly interested in the implications of these two directions for applications in the natural and medical sciences. 
-
-  </p><p>
-  My approach to the first of these goals draws on ideas from statistics, optimization, and applied mathemtics, especially <a href="https://en.wikipedia.org/wiki/Transportation_theory_(mathematics)" target="_blank">optimal transport</a>, which I have used to develop methods to mitigate data scarcity by various types of geometric dataset manipulations: <a href="#InvarOT">alignment</a>, <a href="#OTDD">comparison</a>, <a href="#GWGAN">generation</a>, and <a href="#OTGF">transformation</a>.
-  <a href="https://www.microsoft.com/en-us/research/video/directions-in-ml-automating-dataset-comparison-and-manipulation-with-optimal-transport/">This talk</a> provides a high-level overview of this part of my work.
-  </p><p>
-  As for trustworthy machine learning, I have worked on methods for explaining predictions of <a href="#interpseq">black box models</a>, showed their <a href="#Robust-interpret">lack of robustness</a>, proposed methods to <a href="#SENN">robustify them</a>, and sought inspiration in the social sciences to make them <a href="WOE-HCML">human-centered</a>.
-  </p><p>
-  In the past, I worked on various aspects of learning with highly-structured data such as text or graphs, ranging from <a href="#WE-metric">learning representations</a> of structured objects, to <a href="#DRNN">generating them</a>, to <a href="#interpseq">interpreting models</a> that operate on them.
-
-  <p>
-  <b>Update:</b> In July 2023, I will be joining <a href="https://www.seas.harvard.edu/" target="_blank" rel="noopener noreferrer">Harvard SEAS</a> as an Assistant Professor of Computer Science. I will be looking for motivated PhD students and postdocs to join my group. If you are interested in working with me, send me <a href="mailto:dam@seas.harvard.edu">an email</a> with the subject line "[Harvard] Interested in joining your group" and a brief description of your interests and background. 
+I'm a fifth-year CS Ph.D. student in the <a href="https://www.cs.utah.edu/" target="_blank">School of Computing</a> at the <a href="https://www.utah.edu/" target="_blank">University of Utah</a>, advised by <a href="https://www.cs.utah.edu/~jeffp/" target="_blank">Jeff M. Phillips</a>. My research aims at understanding the geometry of distributed embeddings, contextualized word vectors, and feature space representations for improved interpretability and downstream task utility within the context of Crosslingual/Multilingual Natural Language Processing, Ethical, and Responsible AI. I am very interested in Natural Language Processing, Speech Representation Learning, and Knowledge Representation Learning (esp. graph-based methods), particularly in Monolingual, Cross-lingual/Multilingual, and Multi-Modal settings.
+ 
+I am currently working on two exciting projects: 1) The first project dives into the understanding of models that jointly predict task labels and generate free-text explanations for their predictions, also known as self-rationalization models. They are of great interest in modern Explainable AI since it leads to a more intuitive interaction with NLP systems. Given the free-text explanations from Self-rationalization models (say a GPT-3 model), our goal is to express or assign an uncertainty score to the generated free-text explanations to understand the level of confidence that the Self-rationalization model places on its own generated free-text explanations. 2) We proposed a novel debiasing technique that makes identified conpects uncorrelated and aligned with the coordinate axis—resulting in improved interpretability of vectorized representation. Our goal now is to extend the idea of aligning uncorrelated concepts onto the coordinate axis to the feature representations learned in the penultimate layer of deep neural networks (DNNs) to impose orthogonality in the feature space. The principal idea is to augment the orthogonality property of softmax cross entropy (CE) loss and directly enforce inter-class separation and intra-class clustering in the feature space.
   </p>
+ 
+ 
    <!-- to <a href="#SOT">computing distances</a> between them. The latter two aspects form the core themes of my PhD work:
   <UL style="margin:15px;padding:0px;"> -->
 
