--- a/index.html
+++ b/index.html
@@ -143,17 +143,15 @@ function unhide(divID) {
   <span class="anchor" id="about"></span>
   <h4>About</h4>
 
-  <p>
+<p>
 I'm a fifth-year CS Ph.D. student in the <a href="https://www.cs.utah.edu/" target="_blank">School of Computing</a> at the <a href="https://www.utah.edu/" target="_blank">University of Utah</a>, advised by <a href="https://www.cs.utah.edu/~jeffp/" target="_blank">Jeff M. Phillips</a>. My research aims at understanding the geometry of distributed embeddings, contextualized word vectors, and feature space representations for improved interpretability and downstream task utility within the context of Cross/Multi-lingual Natural Language Processing, Ethical, and Responsible AI. I am very interested in Natural Language Processing, Speech Representation Learning, and Knowledge Representation Learning (esp. graph-based methods), particularly in Monolingual, Cross-lingual/Multilingual, and Multi-Modal settings.
- </p><p>
+</p><p>
 I am currently working on two exciting projects: 
-</p>
-  </p><p>
+</p><p>
 1) The first project dives into the understanding of models that jointly predict task labels and generate free-text explanations for their predictions, also known as self-rationalization models. They are of great interest in modern Explainable AI since it leads to a more intuitive interaction with NLP systems. Given the free-text explanations from Self-rationalization models (say a GPT-3 model), our goal is to express or assign an uncertainty score to the generated free-text explanations to understand the level of confidence that the Self-rationalization model places on its own generated free-text explanations. 2) We proposed a novel debiasing technique that makes identified conpects uncorrelated and aligned with the coordinate axis—resulting in improved interpretability of vectorized representation. Our goal now is to extend the idea of aligning uncorrelated concepts onto the coordinate axis to the feature representations learned in the penultimate layer of deep neural networks (DNNs) to impose orthogonality in the feature space. The principal idea is to augment the orthogonality property of softmax cross entropy (CE) loss and directly enforce inter-class separation and intra-class clustering in the feature space.
-  </p>
-  </p><p>
+</p><p>
 2) We proposed a novel debiasing technique that makes identified conpects uncorrelated and aligned with the coordinate axis—resulting in improved interpretability of vectorized representation. Our goal now is to extend the idea of aligning uncorrelated concepts onto the coordinate axis to the feature representations learned in the penultimate layer of deep neural networks (DNNs) to impose orthogonality in the feature space. The principal idea is to augment the orthogonality property of softmax cross entropy (CE) loss and directly enforce inter-class separation and intra-class clustering in the feature space.
-  </p>
+ </p>
  
    <!-- to <a href="#SOT">computing distances</a> between them. The latter two aspects form the core themes of my PhD work:
   <UL style="margin:15px;padding:0px;"> -->
@@ -185,18 +183,7 @@ I am currently working on two exciting projects:
 <span class="anchor" id="bio"></span>
 <div class="docs-section">
   <h4>Bio</h4>
-  <p> Before coming to MSR, I obtained a PhD in computer science from MIT, where I worked on
-    various topics in machine learning and natural language processing under the
-    supervision of <a href="http://people.csail.mit.edu/tommi/"> Tommi Jaakkola</a>.
-    I also hold BSc (Licenciatura) and MS degrees in mathematics from
-     <a href="https://www.itam.mx">ITAM</a> and  <a href="https://www.courant.nyu.edu/">Courant Institute (NYU)</a>,
-     respectively. During the latter, I worked on semidefinite programming for
-     domain adaptation under the supervision of <a href="http://cs.nyu.edu/~mohri/">Mehryar Mohri</a>.
-     Between Master's and PhD, I spent a year at IBM's T.J. Watson
-    Research Center, working with <a
-    href="http://researcher.watson.ibm.com/researcher/view.php?person=us-kwchurch">Ken Church </a> and others in the Speech
-    Recognition Group.
-
+  <p> Before coming to the University of Utah, I obtained a Masters Degree in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, where I worked on Stochastic Optimal Control theory with applications to Financial Mathematics under the supervision of <a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a>. I also hold a Bachelor’s Degree in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, where I worked under the the supervision of Mrs. Lilian Frempomaa Kyei.  
 
     <!-- I was born and raised in Mexico City (more specifically, in the Coyoacán neighborhood) in a Mexican-Belgian household -->
 
