--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
             <div class="paper">
               <p class="title"><b>On Numerical Stochastic Optimal Control via Bellman's Dynamic Programming Principle</b></p>
               <p><b>Prince Osei Aboagye</b></p>
-              <p><i>Thesis: The University of Texas at El Paso (UTEP). 2018.</i></p>
+              <p><i>Master's Thesis: The University of Texas at El Paso (UTEP). 2018.</i></p>
 
               <!-- This causes the bug where papers appear repeated when selecting all. TODO why?-->
               
