--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
 <span class="anchor" id="bio"></span>
 <div class="docs-section">
   <h4>Bio</h4>
-  <p> Before coming to the University of Utah, I obtained a Masters Degree in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, where I worked on Stochastic Optimal Control Theory with applications to Financial Mathematics under the supervision of <a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a>.I also hold a Bachelor’s Degree in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, where I worked under the the supervision of Mrs. Lilian Frempomaa Kyei.  
+  <p> Before coming to the University of Utah, I obtained a MS in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, where I worked on Stochastic Optimal Control Theory with applications to Financial Mathematics under the supervision of <a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a>.I also hold a BA in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, where I worked under the the supervision of Mrs. Lilian Frempomaa Kyei.  
 
     <!-- I was born and raised in Mexico City (more specifically, in the Coyoacán neighborhood) in a Mexican-Belgian household -->
 
