--- a/index.html
+++ b/index.html
@@ -181,8 +181,19 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
 <span class="anchor" id="bio"></span>
 <div class="docs-section">
   <h4>Bio</h4>
-  <p>Before coming to the University of Utah, I obtained an MS in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, where I worked on Stochastic Optimal Control Theory with Applications to Financial Mathematics under the supervision of <a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a. I also hold a BA in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, where I worked under Mrs. Lilian Frempomaa Kyei.
-<!-- I was born and raised in Mexico City (more specifically, in the Coyoacán neighborhood) in a Mexican-Belgian household -->
+  <p> Before coming to the University of Utah,
+      I obtained an MS in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, 
+      where I worked on Stochastic Optimal Control Theory with Applications to Financial Mathematics under the supervision of a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a>.
+      I also hold a BA in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, 
+      where I worked under Mrs. Lilian Frempomaa Kyei.
+
+
+
+    <!-- I was born and raised in Mexico City (more specifically, in the Coyoacán neighborhood) in a Mexican-Belgian household -->
+
+
+
+
     <!--
   <p> I started my academic path at <a href="http:www.itam.mx">ITAM</a> (Mexico City), where I obtained a Licenciatura (BSc.) in Applied Mathematics with a thesis on functional analysis under the supervision of <a
   href="http://www.itam.mx/es/facultad/profesoresDetalles.php?id_profesor=40">Carlos
