--- a/index.html
+++ b/index.html
@@ -590,10 +590,10 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
       <div class="direction-r">
       
         <div class="flag-wrapper">
-          <span class="flag">ITAM</span>
-          <span class="time-wrapper"><span class="time">2006 - 2011</span></span>
+          <span class="flag">University of Ghana</span>
+          <span class="time-wrapper"><span class="time">2011 - 2015</span></span>
         </div>
-        <div class="desc"><b>BSc in Applied Mathematics</b> <br/> Thesis Advisor: Carlos Bosch <br/> </div>
+        <div class="desc"><b>BA in Mathematics and Economics</b> <br/> Thesis Advisor: Mrs. Lilian Frempomaa Kyei. <br/> </div>
       </div>
     </li>
     
