--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
           <span class="flag">University of Ghana</span>
           <span class="time-wrapper"><span class="time">2011 - 2015</span></span>
         </div>
-        <div class="desc"><b>BA in Mathematics and Economics</b> <br/> Thesis Advisor: Mrs. Lilian Frempomaa Kyei. <br/> </div>
+        <div class="desc"><b>BA in Mathematics and Economics</b> <br/> Thesis Advisor: Mrs. Lilian Frempomaa Kyei <br/> </div>
       </div>
     </li>
     
