--- a/index.html
+++ b/index.html
@@ -590,10 +590,10 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
       <div class="direction-l">
       
         <div class="flag-wrapper">
-          <span class="flag">IBM Research</span>
-          <span class="time-wrapper"><span class="time">2013 - 2014</span></span>
+          <span class="flag">Social Security and National Insurance Trust</span>
+          <span class="time-wrapper"><span class="time">Summer 2014</span></span>
         </div>
-        <div class="desc"><b>Supplemental Researcher</b> <br/> Speech Recognition Group <br/> </div>
+        <div class="desc"><b>Data Analyst Intern</b> <br/> Mentor: Mrs. Akosua M. Nelson-Cofie <br/> </div>
       </div>
     </li>
 
