--- a/index.html
+++ b/index.html
@@ -518,10 +518,10 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
       <div class="direction-l">
       
         <div class="flag-wrapper">
-          <span class="flag">Microsoft Research, NYC</span>
-          <span class="time-wrapper"><span class="time">Summer 2018</span></span>
+          <span class="flag">Visa Research</span>
+          <span class="time-wrapper"><span class="time">Summer 2021</span></span>
         </div>
-        <div class="desc"><b>Research Intern</b> <br/> Mentors: H. Wallach, J.W. Vaughan, H. Daume III <br/> </div>
+        <div class="desc"><b>Research Scientist Intern</b> <br/> Mentors: Wei Zhang, Yan Zheng <br/> </div>
       </div>
     </li>
     
