--- a/index.html
+++ b/index.html
@@ -580,17 +580,17 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
 <div class="docs-section">
   <h4>Misc</h4>
   <p>
-    Outside of research, I enjoy running, brewing beer and playing guitar.
+    Outside of research, I enjoy reading the word of God, praying and playing guitar.
     <!-- As if writing papers for a living weren't enough, I sporadically write non-academic <a href="" target="_blank">stuff</a> too (mostly short stories/poems in Spanish). -->
-    I also like quotes. Here's a few more:
+    Here are a few of my favorite scriptures:
   </p>
 
   <blockquote>
-  "We cannot solve our problems with the same thinking we used when we created them." - A. Einstein
+  I can do all things through Christ who strengthens me. Philippians 4:13 NKJV
   </blockquote>
 
   <blockquote>
-  "The real danger is not that computers will begin to think like men, but that men will begin to think like computers"  - Syndey J. Harris
+  Now the Lord is the Spirit; and where the Spirit of the Lord is, there is liberty. 2 Corinthians 3:17 NKJV
   </blockquote>
 
 </div>
