--- a/index.html
+++ b/index.html
@@ -615,13 +615,13 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
           firstsurname.secondsurname@microsoft.com
         </div> -->
         <div class="four columns">
-          <span onclick="window.open('https://twitter.com/elmelis')" style="cursor: pointer">
+          <span onclick="window.open('https://twitter.com/kp_aboagye')" style="cursor: pointer">
             <i class="fa fa-twitter" aria-hidden="true"></i>
           </span>
-          <span onclick="window.open('https://www.linkedin.com/in/davidalvarezmelis')" style="cursor: pointer">
+          <span onclick="window.open('https://www.linkedin.com/in/prince-osei-aboagye')" style="cursor: pointer">
             <i class="fa fa-linkedin-square" aria-hidden="true"></i>
           </span>
-          <span onclick="window.open('https://github.com/dmelis')" style="cursor: pointer">
+          <span onclick="window.open('https://github.com/poaboagye')" style="cursor: pointer">
             <i class="fa fa-github" aria-hidden="true"></i>
           </span>
         </div>
