--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
     <div class="footer">
       <div class="row">
         <div class="four columns">
-          David Alvarez-Melis
+          Prince Osei Aboagye
         </div>
         <div class="four columns">  &nbsp;&nbsp; </div>
         <!-- <div class="four columns">
