--- a/index.html
+++ b/index.html
@@ -143,8 +143,13 @@ function unhide(divID) {
   <span class="anchor" id="about"></span>
   <h4>About</h4>
 
+<!--
 <p>
 I'm a fifth-year CS Ph.D. student in the <a href="https://www.cs.utah.edu/" target="_blank">School of Computing</a> at the <a href="https://www.utah.edu/" target="_blank">University of Utah</a>, advised by <a href="https://www.cs.utah.edu/~jeffp/" target="_blank">Jeff M. Phillips</a>. My research aims at understanding the geometry of distributed embeddings, contextualized embeddings, and feature space representations for improved interpretability and downstream task utility within the context of Cross/Multi-lingual Natural Language Processing, Ethical, and Responsible AI. I am very interested in Natural Language Processing, Speech Representation Learning, and Knowledge Representation Learning (esp. graph-based methods), particularly in Monolingual, Cross-lingual/Multilingual, and Multi-Modal settings.
+</p><p>> -->
+
+<p>
+I am a Staff Research Scientist at <a href="https://usa.visa.com/about-visa/visa-research.html/" target="_blank">Visa Research</a>.
 </p><p>
 I am currently working on two exciting projects: <b>1)</b> The first project dives into the understanding of models that jointly predict task labels and generate free-text explanations for their predictions, also known as self-rationalization models. They are of great interest in modern Explainable AI since it leads to a more intuitive interaction with NLP systems. Given the free-text explanations from Self-rationalization models (say a GPT-3 model), our goal is to express or assign an uncertainty score to the generated free-text explanations to understand the level of confidence that the Self-rationalization model places on its own generated free-text explanations. 
 </p><p>
