--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         </div>
         <div class="nine columns main-description">
             <h1>Prince Osei Aboagye</h1>
-            <p>Graduate Research Assistant</p>
-            <p>School of Computing, University of Utah</p>
-            <p>Salt Lake City, Utah</p>
+            <p>Staff Research Scientist</p>
+            <p>Visa Research</p>
+            <p>Palo Alto, Califonia</p>
             <p>prince@cs.utah.edu</p>
             <p>
               <span onclick="window.open('https://twitter.com/kp_aboagye')" style="cursor: pointer">
