--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ I'm a fifth-year CS Ph.D. student in the <a href="https://www.cs.utah.edu/" targ
 </p><p>> -->
 
 <p>
-I am a Staff Research Scientist at <a href="https://usa.visa.com/about-visa/visa-research.html/" target="_blank">Visa Research</a>.
+I am a Staff Research Scientist at <a href="https://usa.visa.com/about-visa/visa-research.html" target="_blank">Visa Research</a>.
 </p><p>
 I am currently working on two exciting projects: <b>1)</b> The first project dives into the understanding of models that jointly predict task labels and generate free-text explanations for their predictions, also known as self-rationalization models. They are of great interest in modern Explainable AI since it leads to a more intuitive interaction with NLP systems. Given the free-text explanations from Self-rationalization models (say a GPT-3 model), our goal is to express or assign an uncertainty score to the generated free-text explanations to understand the level of confidence that the Self-rationalization model places on its own generated free-text explanations. 
 </p><p>
