--- a/index.html
+++ b/index.html
@@ -146,15 +146,18 @@ function unhide(divID) {
 <!--
 <p>
 I'm a fifth-year CS Ph.D. student in the <a href="https://www.cs.utah.edu/" target="_blank">School of Computing</a> at the <a href="https://www.utah.edu/" target="_blank">University of Utah</a>, advised by <a href="https://www.cs.utah.edu/~jeffp/" target="_blank">Jeff M. Phillips</a>. My research aims at understanding the geometry of distributed embeddings, contextualized embeddings, and feature space representations for improved interpretability and downstream task utility within the context of Cross/Multi-lingual Natural Language Processing, Ethical, and Responsible AI. I am very interested in Natural Language Processing, Speech Representation Learning, and Knowledge Representation Learning (esp. graph-based methods), particularly in Monolingual, Cross-lingual/Multilingual, and Multi-Modal settings.
-</p><p>> -->
+</p><p> -->
 
 <p>
-I am a Staff Research Scientist at <a href="https://usa.visa.com/about-visa/visa-research.html" target="_blank">Visa Research</a>.
-</p><p>
+I am a Staff Research Scientist at <a href="https://usa.visa.com/about-visa/visa-research.html" target="_blank">Visa Research</a>. I'm interested in Representation Learning for Natural Language Processing and Computer Vision. My research aims to understand the geometry of embedded representations to enhance their interpretability and downstream task utility within the context of Multi-lingual Natural Language Processing, Computer Vision, Ethical and Responsible AI.	
+</p>
+
+<!--
+<p>
 I am currently working on two exciting projects: <b>1)</b> The first project dives into the understanding of models that jointly predict task labels and generate free-text explanations for their predictions, also known as self-rationalization models. They are of great interest in modern Explainable AI since it leads to a more intuitive interaction with NLP systems. Given the free-text explanations from Self-rationalization models (say a GPT-3 model), our goal is to express or assign an uncertainty score to the generated free-text explanations to understand the level of confidence that the Self-rationalization model places on its own generated free-text explanations. 
 </p><p>
 <b>2)</b> We proposed a novel debiasing technique that makes identified concepts uncorrelated and aligned with the coordinate axis—resulting in improved interpretability of vectorized representation. Our goal now is to extend the idea of aligning uncorrelated concepts onto the coordinate axis to the feature representations learned in the penultimate layer of deep neural networks (DNNs) in other to impose orthogonality in the feature space. The principal idea is to augment the orthogonality property of the softmax cross entropy (CE) loss and simultaneously enforce an improved inter-class separation and intra-class clustering in the feature space.
- </p>
+ </p> -->
  
    <!-- to <a href="#SOT">computing distances</a> between them. The latter two aspects form the core themes of my PhD work:
   <UL style="margin:15px;padding:0px;"> -->
