--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
 <span class="anchor" id="bio"></span>
 <div class="docs-section">
   <h4>Bio</h4>
-  <p> Before coming to the University of Utah, I obtained an MS in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, where I worked on Stochastic Optimal Control Theory with Applications to Financial Mathematics under the supervision of <a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a>. I also hold a BA in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, where I worked under Mrs. Lilian Frempomaa Kyei. 
+  <p> I obtained my Ph.D. from the <a href="https://www.cs.utah.edu/" target="_blank">School of Computing</a> at the <a href="https://www.utah.edu/" target="_blank">University of Utah</a>, where I was advised by <a href="https://www.cs.utah.edu/~jeffp/" target="_blank">Jeff M. Phillips</a>. Before coming to the University of Utah, I obtained an MS in Mathematics from the <a href="https://www.utep.edu/" target="_blank">University of Texas at El Paso</a>, where I worked on Stochastic Optimal Control Theory with Applications to Financial Mathematics under the supervision of <a href="https://hb2504.utep.edu/Home/Profile?username=mpokojovy" target="_blank">Michael Pokojovy</a>. I also hold a BA in Economics and Mathematics from the <a href="https://www.ug.edu.gh/" target="_blank">University of Ghana</a>, where I worked under Mrs. Lilian Frempomaa Kyei. 
 
 
 
