--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
       
         <div class="flag-wrapper">
           <span class="flag">Visa Research</span>
-          <span class="time-wrapper"><span class="time">Summer 2022</span></span>
+          <span class="time-wrapper"><span class="time">2023</span></span>
         </div>
         <div class="desc"><b>Staff Research Scientist</b> </div>
       </div>
