--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
             <span class="anchor" id="HHOT"></span>
             <div class="paper">
               <p class="title"><b>Method, System, and Computer Program Product for Normalizing Embeddings for Cross-Embedding Alignment</b></p>
-              <p>Yan Zheng, Michael Yeh, WANG Junpeng, Wei Zhang, Liang Wang, Hao Yang, <b>Prince Osei Aboagye</b></p>
+              <p><b>Inventors:</b> Yan Zheng, Michael Yeh, WANG Junpeng, Wei Zhang, Liang Wang, Hao Yang, <b>Prince Osei Aboagye</b></p>
               <p><i>US Patent App. 18/006,649, 2023</i></p>
 
               <!-- This causes the bug where papers appear repeated when selecting all. TODO why?-->
