--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ I am currently working on two exciting projects: <b>1)</b> The first project div
           <span class="flag">University of Utah</span>
           <span class="time-wrapper"><span class="time">2018 - 2023</span></span>
         </div>
-        <div class="desc"><b>Ph.D. in Computing</b> <br/> Thesis Advisor: Dr. Jeff Phillips</div>
+        <div class="desc"><b>Ph.D. in Computer Science</b> <br/> Thesis Advisor: Dr. Jeff Phillips</div>
       </div>
     </li>
     
