--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1>Prince Osei Aboagye</h1>
             <p>Staff Research Scientist</p>
             <p>Visa Research</p>
-            <p>385 Sherman Ave, Palo Alto, Califonia</p>
+            <p>385 Sherman Ave, Palo Alto, California</p>
             <p>prince@cs.utah.edu</p>
             <p>
               <span onclick="window.open('https://twitter.com/kp_aboagye')" style="cursor: pointer">
